[tool.poetry]
name = "smpmgr"
version = "0"
description = "Simple Management Protocol (SMP) Manager for remotely managing MCU firmware"
authors = ["J.P. Hutchins <jp@intercreate.io>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{ include = "smpmgr" }]

[tool.poetry.scripts]
smpmgr = "smpmgr.main:app"

[tool.poetry-version-plugin]
source = "git-tag"

[tool.poetry.dependencies]
python = ">=3.10, <3.14"
smpclient = "^4.4.0"
typer = { extras = ["all"], version = "^0.9.0" }
readchar = "^4.0.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
isort = "^5.12.0"
mypy = "^1.7.0"
mypy-extensions = "^1.0.0"
types-pyserial = "^3.5.0.11"
pyinstaller = "^6.3.0"
gitpython = "^3.1.41"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.mypy]
disallow_untyped_defs = true
exclude = ['.venv', 'build', 'dist']

[tool.pytest.ini_options]
filterwarnings = ["ignore:The --rsyncdir:DeprecationWarning"]
